# malabar-mandi-prices

./: .gitignore  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  daily-data.yml  deploy.yml
config/: alerts.yaml  sources.yaml
data/: alerts_state.json  des_state.json
data/news/: arecanut.csv  black-pepper.csv  coconut.csv  copra.csv
data/prices/arecanut/: 2021.csv  2022.csv  2023.csv  2024.csv  2025.csv  2026.csv
data/prices/black-pepper/: 2021.csv  2022.csv  2023.csv  2024.csv  2025.csv  2026.csv
data/prices/coconut/: 2021.csv  2022.csv  2023.csv  2024.csv  2025.csv  2026.csv
data/prices/copra/: 2021.csv  2022.csv  2023.csv  2024.csv  2025.csv  2026.csv
data/quarantine/: 2026-07.csv
e2e/: conftest.py  screenshot.py  test_dashboard.py  validate_contract.py
pipeline/: pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
pipeline/src/mandi/: __init__.py  alerts.py  analyze.py  backfill_agmarknet.py  backfill_ceda.py  cli.py  config.py  des.py  discover.py  fetch.py  news.py  normalize.py  publish.py  store.py
pipeline/tests/: conftest.py  test_alerts.py  test_analyze.py  test_config.py  test_des.py  test_fetch.py  test_news.py  test_normalize.py  test_publish.py  test_store.py
pipeline/tests/fixtures/: des_bulletin.txt  ogd_records.json
site/: index.html  openapi.json
site/assets/: app.js  assistant.js  charts.js  style.css
