[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mandi"
version = "0.1.0"
description = "Malabar mandi price pipeline: fetch, normalize, store, analyze, publish"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "PyYAML>=6.0",
    "pandas>=2.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S"]  # S = flake8-bandit security rules
ignore = ["S101"]  # allow asserts in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
